menu gap fixed

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -57,7 +57,7 @@
 
 @media screen and (max-width: 1200px) {
   .about-row {
-    padding: 0 0 !important;
+    padding: 4em 0 !important;
   }
 
   .about-text {
@@ -65,16 +65,17 @@
   }
 }
 
-@media screen and (max-width: 800px) {
-  .about-row {
-    max-width: 80%;}
+
+
+@media screen and (max-width: 900px) {
+  /* .about-row {
+    padding-top: 5rem;} */
 
 }
 
-
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 800px) {
   .about-row {
-    margin-top: 2rem;}
+    max-width: 80%;}
 
 }
 
